--- a/Linkup/res/layout/help_dialog.xml
+++ b/Linkup/res/layout/help_dialog.xml
@@ -43,22 +43,13 @@
         android:layout_marginBottom="20dp"
         android:gravity="bottom|center_horizontal" >
 
-        <!-- <Button -->
-        <!-- android:id="@+id/dialog_button_ok" -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="wrap_content" -->
-        <!-- android:layout_centerHorizontal="true" -->
-        <!-- android:drawableLeft="@drawable/ok" -->
-        <!-- android:textSize="24sp" /> -->
-
         <TextView
             android:id="@+id/dialog_button_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:drawableTop="@drawable/next"
+            android:background="@drawable/next"
             android:gravity="center"
-            android:text="@string/submit"
             android:textColor="#ffa500" />
     </RelativeLayout>
 
