--- a/Linkup/res/layout/level_top.xml
+++ b/Linkup/res/layout/level_top.xml
@@ -64,7 +64,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
-            android:layout_margin="8dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_toRightOf="@id/ivIcon"
             android:gravity="center"
             android:singleLine="true"
@@ -72,49 +74,49 @@
             android:textSize="20sp" >
         </TextView>
 
-        <!-- <LinearLayout -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="wrap_content" -->
-        <!-- android:layout_below="@id/tvUser" -->
-        <!-- android:layout_toRightOf="@id/ivIcon" -->
-        <!-- android:orientation="horizontal" > -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvUser"
+            android:layout_toRightOf="@id/ivIcon"
+            android:orientation="horizontal" >
 
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/diamond"
+                tools:ignore="contentDescription" />
 
-        <!-- <ImageView -->
-        <!-- android:layout_width="20dp" -->
-        <!-- android:layout_height="20dp" -->
-        <!-- android:layout_marginLeft="10dp" -->
-        <!-- android:layout_marginRight="10dp" -->
-        <!-- android:src="@drawable/diamond" -->
-        <!-- tools:ignore="contentDescription" /> -->
+            <TextView
+                android:id="@+id/tvDiamond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""
+                android:textColor="#fff4a460"
+                android:textSize="16sp" >
+            </TextView>
 
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/coins"
+                tools:ignore="contentDescription" />
 
-        <!-- <TextView -->
-        <!-- android:id="@+id/tvDiamond" -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="wrap_content" -->
-        <!-- android:layout_weight="1" -->
-        <!-- android:text="" > -->
-        <!-- </TextView> -->
-
-
-        <!-- <ImageView -->
-        <!-- android:layout_width="20dp" -->
-        <!-- android:layout_height="20dp" -->
-        <!-- android:layout_marginLeft="10dp" -->
-        <!-- android:layout_marginRight="10dp" -->
-        <!-- android:src="@drawable/coins" -->
-        <!-- tools:ignore="contentDescription" /> -->
-
-
-        <!-- <TextView -->
-        <!-- android:id="@+id/tvCoin" -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="wrap_content" -->
-        <!-- android:layout_weight="1" -->
-        <!-- android:text="" > -->
-        <!-- </TextView> -->
-        <!-- </LinearLayout> -->
+            <TextView
+                android:id="@+id/tvCoin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""
+                android:textColor="#fff4a460"
+                android:textSize="16sp" >
+            </TextView>
+        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
