--- a/Linkup/res/layout/confirm_dialog.xml
+++ b/Linkup/res/layout/confirm_dialog.xml
@@ -6,30 +6,18 @@
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/dialog_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/success"
+        android:gravity="center"
         android:paddingLeft="30dip"
-        android:paddingTop="10dip" >
-
-        <ImageView
-            android:id="@+id/dialog_title_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/success"
-            tools:ignore="contentDescription" />
-
-        <TextView
-            android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dip"
-            android:layout_toRightOf="@id/dialog_title_image"
-            android:textColor="#000000"
-            android:textSize="30sp" />
-    </RelativeLayout>
+        android:paddingRight="78dip"
+        android:paddingTop="10dip"
+        android:textColor="#FF3333FF"
+        android:textSize="32sp" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -48,30 +36,42 @@
         android:textColor="#000000"
         android:textSize="18sp" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:gravity="bottom|center_horizontal"
-        android:paddingBottom="10dip"
-        android:paddingTop="10dip" >
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/dialog_button_cancel"
-            android:layout_width="100dip"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_bj"
             android:drawableLeft="@drawable/cancel"
-            android:textSize="20sp" />
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/cancel"
+            android:textColor="#ffa500" />
 
         <Button
             android:id="@+id/dialog_button_ok"
-            android:layout_width="100dip"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dip"
-            android:layout_toRightOf="@id/dialog_button_cancel"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/button_bj"
             android:drawableLeft="@drawable/ok"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/submit"
+            android:textColor="#ffa500" />
+    </LinearLayout>
 
 </LinearLayout>
