优化资源和界面

--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:drawableTop="@drawable/more"
+            android:drawableTop="@drawable/top"
             android:gravity="center"
             android:text="@string/top_search" />
 
